# lab1_sistemas_operativos2

./: README.md  client  client.c  comandos_para_compilar.md  common.c  common.h  documentation.md  emergency.c  emergency.h  links.md  possible_infection.c  possible_infection.h  refuge_summary.json  server  server.c  supplies_update.c  supplies_update.h  time_str_static.md  to_do_list.md  translated_documentation.md
copia_repositorio/: CMakeLists.txt  CTestConfig.cmake  Doxyfile  Pipeline.cmake  documentation.md
copia_repositorio/lib/libdyn/: CMakeLists.txt
copia_repositorio/lib/libdyn/include/: emergency.h
copia_repositorio/lib/libdyn/src/: emergency.c
copia_repositorio/lib/libsta/: CMakeLists.txt
copia_repositorio/lib/libsta/include/: supplies_update.h
copia_repositorio/lib/libsta/src/: supplies_update.c
copia_repositorio/src/: server.c
fix/: possible_infection.c  possible_infection.h  refuge_summary.json  server  server.c  tcp_client.c  tcp_ipv6_client.c  udp_client  udp_client.c
